# mappf-experiments

./: .dockerignore  .gcloudignore  .gitignore  Cargo.toml  README.md  demo.sh  kustomization.yaml  refactor.md
biei/: Cargo.toml
biei-sim/: Cargo.toml  README.md
biei-sim/src/: calibrated_costs.rs  channel_transport.rs  chitchat_bus.rs  config.rs  harness.rs  lib.rs  main.rs  metrics.rs  scenarios.rs  stub_renderer.rs  sweep.rs  workload.rs
biei/examples/: maplibre_smoke.rs
biei/src/: activity.rs  config.rs  dispatcher.rs  drain.rs  gossip.rs  hrw.rs  lib.rs  main.rs  membership.rs  metrics.rs  node.rs  options.rs  render_cache.rs  runtime.rs  server.rs  style_catalog.rs  tileset_catalog.rs  transport.rs  types.rs  util.rs  wire.rs  worker.rs  worker_pool.rs
biei/src/http/: adapter.rs  addlayer.rs  format.rs  ingress.rs  internal.rs  mod.rs  parse_util.rs  path.rs  preview.html  preview.rs  query.rs  response.rs  static_image.rs  tile.rs
biei/src/http/overlay/: mod.rs
biei/src/renderer/: maplibre.rs  mod.rs
biei/src/renderer/actor/: addlayer.rs  encode.rs  mod.rs
biei/src/renderer/file_source/: health.rs  response.rs  singleflight.rs  tests.rs
biei/src/renderer/overlay/: mod.rs  pin.rs
crates/biei-core/: Cargo.toml
crates/biei-core/examples/: maplibre_smoke.rs
crates/biei-core/src/: config.rs  dispatcher.rs  gossip.rs  hrw.rs  internal_transport.rs  lib.rs  metrics.rs  node.rs  render_cache.rs  runtime.rs  style_catalog.rs  types.rs  wire.rs  worker.rs  worker_pool.rs
crates/biei-core/src/http/: adapter.rs  error.rs  mod.rs  path.rs  preview.html  preview.rs  response.rs  static_image.rs  tile.rs
crates/biei-core/src/http/overlay/: mod.rs
crates/biei-core/src/node/: view_cache.rs
crates/biei-core/src/renderer/: file_source.rs  http_fetch.rs  mod.rs
crates/biei-core/src/renderer/actor/: addlayer.rs  camera.rs  encode.rs  mod.rs
crates/biei-core/src/renderer/file_source/: cache.rs  metrics.rs  policy.rs  retry.rs
crates/ishikari-core/: Cargo.toml
crates/ishikari-core/src/: cache.rs  cache_policy.rs  cluster_metadata.rs  config.rs  drain.rs  interned.rs  lib.rs  membership.rs  metrics.rs  singleflight.rs
crates/ishikari-core/src/pmtiles/: cache.rs  mod.rs  reader.rs
crates/ishikari-core/src/server/: cache.rs  conditional.rs  contract_tests.rs  glyph.rs  internal.rs  mod.rs  provider_body.rs  provider_cache_policy.rs  sprite.rs  style.rs  upstream.rs
crates/ishikari-core/src/server/tileset/: error.rs  mapterhorn.rs  mlt.rs  mod.rs  preview.rs  tile.rs  tilejson.rs
crates/ishikari-core/src/storage/: mod.rs  peer.rs  pmtiles.rs  resolver.rs  routing.rs  store_registry.rs  tuning.rs
crates/ishikari-core/tests/: metadata.rs  metrics.rs
crates/mmpf-auth/: Cargo.toml
crates/mmpf-auth/src/: lib.rs
crates/mmpf-cluster/: Cargo.toml
crates/mmpf-cluster/src/: bootstrap.rs  lib.rs  simulation.rs
crates/mmpf-cluster/src/simulation/: churn.rs
crates/mmpf-common/: Cargo.toml
crates/mmpf-common/src/: lib.rs  metrics.rs  path.rs  resource_templates.rs  rng.rs  singleflight.rs  sync.rs
crates/mmpf-http/: Cargo.toml
crates/mmpf-http/src/: cache_control.rs  content_type.rs  lib.rs  operational.rs  request_id.rs  serve.rs
crates/mmpf-mln-filesource/: Cargo.toml  README.md
crates/mmpf-mln-filesource/src/: http.rs  lib.rs  policy.rs  source.rs
crates/mmpf-mln-filesource/src/source/: cache.rs  health.rs  metrics.rs  response.rs  singleflight.rs  tests.rs
crates/mmpf-pmtiles/: Cargo.toml  README.md
crates/mmpf-pmtiles/src/: format.rs  lib.rs  metadata.rs  reader.rs
crates/mmpf-terrain/: Cargo.toml
crates/mmpf-terrain/src/: contours.rs  dem.rs  hillshade.rs  lib.rs  topology.rs
ishikari/: Cargo.toml
ishikari-sim/: Cargo.toml
ishikari-sim/src/: churn.rs  cluster.rs  latency.rs  lib.rs  main.rs  membership.rs  modeled.rs  report.rs  timed.rs  visualization.html  workload.rs
ishikari/src/: config.rs  main.rs  membership.rs  metrics.rs  request_id.rs
ishikari/src/pmtiles/: cache.rs  format.rs  metadata.rs  reader.rs
ishikari/src/server/: glyph.rs  mod.rs  sprite.rs  style.rs  upstream.rs
ishikari/src/server/tileset/: mlt.rs  mod.rs  preview.rs  tile.rs  tilejson.rs
ishikari/src/server/tileset/terrain/: dem.rs  (+3 more)
ishikari/src/storage/: mod.rs  peer.rs  pmtiles.rs  resolver.rs  routing.rs  store_registry.rs
ishikari/src/storage/chunked_store/: coordinator.rs  fetcher.rs  mod.rs  store.rs
ishikari/tests/: metrics.rs
servers/biei/: Cargo.toml  README.md
servers/biei/src/: app.rs  auth.rs  cli.rs  drain.rs  main.rs  membership.rs  options.rs
servers/biei/src/http/: adapter.rs  addlayer.rs  error.rs  format.rs  ingress.rs  internal.rs  metrics.rs  mod.rs  path.rs  preview.html  preview.rs  query.rs  response.rs  static_image.rs  tile.rs
servers/biei/src/renderer/: maplibre.rs  mod.rs
servers/biei/src/runtime/: mod.rs  run.rs
servers/ishikari/: Cargo.toml  README.md
servers/ishikari/src/: app.rs  cli.rs  drain.rs  http_client.rs  internal_transport.rs  main.rs  mapterhorn.rs  membership.rs  options.rs  provider.rs  request_id.rs  runtime.rs
servers/ishikari/src/server/: auth.rs  contract_tests.rs  cpu_work.rs  glyph.rs  internal.rs  mod.rs  provider.rs  provider_body.rs  provider_cache_policy.rs  response.rs  sprite.rs  state.rs  style.rs  upstream.rs
sims/biei-sim/: Cargo.toml  README.md
sims/biei-sim/examples/: churn-plan.json
sims/biei-sim/src/: calibrated_costs.rs  calibration.rs  calibration_runner.rs  channel_transport.rs  chitchat_bus.rs  churn.rs  config.rs  harness.rs  legacy_sweeps.rs  lib.rs  main.rs  metrics.rs  report.rs  scenarios.rs  stub_renderer.rs  sweep.rs  visualization.html  visualization.rs  workload.rs
sims/biei-sim/src/calibrated_costs/: derivation.rs  empirical.rs  histogram.rs  mod.rs  provenance.rs  tests.rs
sims/ishikari-sim/: Cargo.toml
sims/ishikari-sim/src/: churn.rs  cluster.rs  config.rs  http_replay.rs  latency.rs  lib.rs  main.rs  membership.rs  modeled.rs  report.rs  sweep.rs  timed.rs  topology.rs  trace.rs  visualization.html  visualization.rs  workload.rs
(+176 files in other folders)
