[workspace]
members = ["ishikari", "ishikari-sim"]
default-members = ["ishikari"]
resolver = "3"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
brotli = "8"
bytes = "1"
chitchat = "0.11"
clap = { version = "4.6", features = ["derive", "env"] }
fast_hilbert = "2"
fast-mvt = { version = "0.4", default-features = false, features = ["writer"] }
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }
image = { version = "0.25", default-features = false, features = ["webp", "jpeg"] }
internment = { version = "0.8", default-features = false, features = ["arc"] }
mlt-core = { version = "0.12", default-features = false }
moka = { version = "0.12", features = ["sync", "future"] }
object_store = { version = "0.14", features = ["aws", "gcp", "http"] }
prometheus = "0.14"
rand = "0.9"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
twox-hash = "2"
url = "2"
webp = { version = "0.3", default-features = false }
zstd = "0.13"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
