[workspace]
members = [
    "crates/biei-core",
    "crates/ishikari-core",
    "crates/mmpf-terrain",
    "servers/biei",
    "servers/ishikari",
    "sims/biei-sim",
    "sims/ishikari-sim",
]
default-members = ["servers/biei", "servers/ishikari"]
resolver = "3"

[workspace.dependencies]
ab_glyph = "0.2"
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
brotli = "8"
bytes = "1"
chitchat = "0.11"
clap = { version = "4.6", features = ["derive", "env"] }
fast_hilbert = "2"
fast-mvt = { version = "0.5", default-features = false, features = ["writer"] }
futures-util = "0.3"
humantime = "2"
httpdate = "1"
internment = { version = "0.8", default-features = false, features = ["arc"] }
maplibre_native = { version = "0.8.7", default-features = false, features = ["json", "geojson", "log", "tokio"] }
mlt-core = { version = "0.12", default-features = false }
moka = { version = "0.12", features = ["sync", "future"] }
object_store = { version = "0.14", features = ["aws", "gcp", "http"] }
prometheus = "0.14"
rand = "0.10.2"
rand_distr = "0.6"
rand_xoshiro = "0.8"
reqwest = { version = "0.13.4", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tiny-skia = "0.12"
tokio = { version = "1", features = ["full", "test-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
twox-hash = "2"
url = "2.5"
webp = { version = "0.3", default-features = false }
zstd = "0.13"

biei-core = { path = "crates/biei-core" }
ishikari-core = { path = "crates/ishikari-core" }
mmpf-terrain = { path = "crates/mmpf-terrain" }

[profile.dev.package."*"]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
