[package]
name = "biei"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
ab_glyph.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
chitchat.workspace = true
clap.workspace = true
# image crate が transitively 引いてくる flate2 の backend を zlib-ng に揃えるため、
# workspace dep を biei から直接参照する(features 統一の条件)。biei は flate2 を
# 直接呼ばないが、参照しないと workspace.dependencies の features が無視される。
flate2.workspace = true
humantime.workspace = true
image.workspace = true
maplibre_native.workspace = true
moka.workspace = true
prometheus.workspace = true
rand.workspace = true
rand_xoshiro.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tiny-skia.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
webp.workspace = true

[features]
# Opt-in OpenGL backend for Linux / headless containers. Kept out of the default
# set so macOS dev builds keep using Metal. The container build enables it with
# `cargo build --features gl-opengl`; on Linux maplibre-native's `opengl` backend
# defaults to an EGL surfaceless context, so it renders headless with no X server
# (no Xvfb). Do NOT also enable `glx` — that needs X11 and is rejected when
# building against the precompiled amalgam (MLN_PRECOMPILE).
gl-opengl = ["maplibre_native/opengl"]

[[example]]
name = "maplibre_smoke"
