[package]
name = "ishikari"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
description = "A distributed cache proxy for serving tiles from PMTiles archives in object storage"
repository = "https://github.com/MIERUNE/ishikari"

[features]
default = []
simulator-support = []

[dependencies]
anyhow.workspace = true
axum.workspace = true
brotli.workspace = true
bytes.workspace = true
chitchat.workspace = true
clap.workspace = true
fast_hilbert.workspace = true
fast-mvt.workspace = true
flate2.workspace = true
image.workspace = true
internment.workspace = true
mlt-core.workspace = true
moka.workspace = true
object_store.workspace = true
prometheus.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
twox-hash.workspace = true
url.workspace = true
webp.workspace = true
zstd.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
