[package]
name = "biei-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
bytes.workspace = true
mmpf-common.workspace = true
mmpf-http.workspace = true
moka.workspace = true
prometheus.workspace = true
rand.workspace = true
rand_xoshiro.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
