[package]
name = "ishikari-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "A distributed cache proxy for serving tiles from PMTiles archives in object storage"
repository.workspace = true
publish = false

[features]
default = []
simulator-support = []
# Compiles object_store's cloud backends (GCS/S3/HTTP). Off by default so the
# core and simulator link only the in-memory and local-filesystem stores; the
# production `ishikari` server enables this.
cloud = ["object_store/aws", "object_store/gcp", "object_store/http"]

[dependencies]
anyhow.workspace = true
bytes.workspace = true
internment.workspace = true

mmpf-common.workspace = true
mmpf-pmtiles.workspace = true
moka.workspace = true
object_store.workspace = true
prometheus.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt", "sync", "time"] }
tracing.workspace = true
twox-hash.workspace = true
url.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util", "test-util"] }
