[package]
name = "mmpf-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared optional delivery-plane authentication for MMPF servers"
publish = false

[dependencies]
anyhow.workspace = true
http = "1"
mmpf-common.workspace = true
moka.workspace = true
object_store = { workspace = true, features = ["aws", "gcp", "http"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true
url.workspace = true
