[package]
name = "mmpf-cluster"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Shared Chitchat node lifecycle for MMPF services"
repository.workspace = true
publish = false

[features]
default = []
simulation = ["dep:async-trait", "dep:mmpf-common", "dep:serde", "dep:serde_json"]

[dependencies]
anyhow.workspace = true
async-trait = { workspace = true, optional = true }
chitchat.workspace = true
mmpf-common = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
