[package]
name = "mmpf-http"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Shared HTTP protocol contracts for MMPF services"
repository.workspace = true
publish = false

[features]
# Optional dual-listener serving harness shared by the biei/ishikari servers.
# The default crate stays light (only `rand`/`serde`); the cores that depend on
# `mmpf-http` must NOT enable this, so they never pull in axum/tokio.
serve = ["dep:axum", "dep:tokio", "dep:anyhow", "dep:tracing"]

[dependencies]
rand.workspace = true
serde.workspace = true

anyhow = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["net", "rt", "sync", "time", "macros", "signal"] }
tracing = { workspace = true, optional = true }
