[package]
name = "mmpf-mln-filesource"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Rust HTTP, cache, and retry FileSource for MapLibre Native"
repository.workspace = true
readme = "README.md"
publish = false

[dependencies]
anyhow.workspace = true
httpdate.workspace = true
maplibre_native.workspace = true
mmpf-common.workspace = true
mmpf-http.workspace = true
moka.workspace = true
prometheus.workspace = true
reqwest = { workspace = true, features = ["rustls", "http2", "gzip", "deflate", "stream"] }
tokio = { workspace = true, features = ["macros", "net", "rt", "sync", "time"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["io-util", "test-util"] }
