[package]
name = "mmpf-pmtiles"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Customizable PMTiles v3 reader primitives for MMPF"
repository.workspace = true
readme = "README.md"
publish = false

[dependencies]
anyhow.workspace = true
brotli.workspace = true
bytes.workspace = true
fast_hilbert.workspace = true
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }
serde.workspace = true
serde_json.workspace = true
zstd.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
