[package]
name = "biei"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
ab_glyph.workspace = true
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
biei-core.workspace = true
bytes.workspace = true
clap.workspace = true
futures-util.workspace = true
humantime.workspace = true
image = "0.25"
maplibre_native.workspace = true
mmpf-cluster.workspace = true
mmpf-common.workspace = true
mmpf-http = { workspace = true, features = ["serve"] }
mmpf-mln-filesource.workspace = true
moka.workspace = true
prometheus.workspace = true
reqwest = { workspace = true, features = ["rustls", "http2", "gzip", "deflate", "stream"] }
serde_json.workspace = true
tiny-skia.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
webp = { workspace = true, default-features = false }

[features]
gl-opengl = ["maplibre_native/opengl"]

[dev-dependencies]
tokio = { workspace = true, features = ["io-util", "test-util"] }
tower = { version = "0.5", features = ["util"] }
