[package]
name = "biei-sim"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
biei-core.workspace = true
bytes.workspace = true
chitchat.workspace = true
clap.workspace = true
rand.workspace = true
rand_distr.workspace = true
rand_xoshiro.workspace = true
reqwest = { workspace = true, features = ["rustls", "http2", "gzip", "deflate", "stream"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
