[package]
name = "ishikari-sim"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
chitchat.workspace = true
clap.workspace = true
ishikari-core = { workspace = true, features = ["simulator-support"] }
moka.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["rustls", "http2"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[dev-dependencies]
axum.workspace = true
