[package]
name = "ishikari-sim"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
ishikari-core = { workspace = true, features = ["simulator-support"] }
mmpf-cluster = { workspace = true, features = ["simulation"] }
mmpf-common.workspace = true
mmpf-pmtiles.workspace = true
moka.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["rustls", "http2"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync", "test-util", "time"] }

[dev-dependencies]
axum.workspace = true
tokio = { workspace = true, features = ["io-util", "net"] }
